<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewStudent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menu_screen.ui.view.activity.MenuActivity"
    android:background="#FFF"
    android:padding="10dp">

    <ImageView
        android:id="@+id/btnSignOut"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:src="@drawable/ic_signout"
        android:contentDescription="@string/description_icon_signOut" />

    <ImageView
        android:id="@+id/ivIconAdd"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:contentDescription="@string/description_icon_add"
        android:src="@drawable/ic_person_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignOut"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextDni"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/helperInputDni"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIconAdd"
        app:layout_constraintVertical_bias="0.02"
        app:startIconContentDescription="@string/inputTextDni">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="8" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextName"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiDni"
        app:layout_constraintVertical_bias="0.02">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextSurname"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiNombre"
        app:layout_constraintVertical_bias="0.02">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextYear"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiApellido"
        app:layout_constraintVertical_bias="0.02">

        <AutoCompleteTextView
            android:id="@+id/acYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveData"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:hint="@string/buttonSaveData"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintVertical_bias="0.05" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/piInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSaveData"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>