<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constrainGrade"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragment.GradeFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiContainerDniGrade"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:helperText="@string/helperInputDni"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDniGrade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="8"
            android:inputType="number"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/piTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/tiContainerDniGrade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStudentData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tiContainerDniGrade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiContainerFirstTerm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextFirstTerm"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/helperInputTerm"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvStudentData"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstTerm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiContainerSecondTerm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextSecondTerm"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/helperInputTerm"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiContainerFirstTerm"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSecondTerm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiContainerThirdTerm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputTextThirdTerm"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/helperInputTerm"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiContainerSecondTerm"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etThirdTerm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnInsertTerm"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/buttonSaveTerm"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiContainerThirdTerm"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>