<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <View
                    android:id="@+id/tvSurname"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:text="@string/inputTextSurname"
                    android:background="@color/progress_shimmer"
                    />
                <View
                    android:id="@+id/tvYear"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/inputTextYear"
                    android:background="@color/progress_shimmer"
                    />
                <View
                    android:id="@+id/tvGrade"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/inputTextGrade"
                    android:background="@color/progress_shimmer"
                    />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@color/progress_shimmer">

                </View>

                <View
                    android:id="@+id/btnGradeAdd"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/progress_shimmer"
                    />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>